[package]
name = "ccsplit"
version = "0.1.0"
authors = ["Jochen Schieberlein <jochen.schieberlein@thinprint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "0.2"
clap = "^3.0.0-beta.2"
console = "^0.11"