[package]
name = "ccsplit"
version = "0.1.0"
authors = ["Jochen Schieberlein <jochen.schieberlein@thinprint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.5"
#fancy-regex = "^0.7"
clap = "^3.0.0-beta.2"
console = "^0.11"
chrono = "^0.4"
lazy_static = "^1.4.0"

#diesel = { version = "^1.4", features = ["sqlite"] }
rusqlite = { version = "^0.25", features = ["bundled"] }